--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@components/*": ["src/components/*"],
       "@data/*": ["src/data/*"],
+      "@layouts/*": ["src/layouts/*"],
       "@styles/*": ["src/styles/*"]
     }
   }
