--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  PROJECT_DIR: "."        # change si ton code est dans un sous-dossier (ex: "frontend")
+  PROJECT_DIR: "."
   ARCHIVE_NAME: "site.tgz"
 
 jobs:
@@ -19,16 +19,15 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node 20
+      - name: Setup Node 20 (no cache to avoid lockfile error)
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
 
       - name: Enable Corepack (yarn/pnpm support)
         run: corepack enable
 
-      - name: Install deps (npm/yarn/pnpm + lockfile fallback)
+      - name: Install deps (lockfile-aware)
         working-directory: ${{ env.PROJECT_DIR }}
         run: |
           if [ -f pnpm-lock.yaml ]; then
@@ -56,7 +55,6 @@ jobs:
           ts=$(date +'%Y%m%d%H%M%S')
           echo "RELEASE_NAME=release-$ts" >> $GITHUB_ENV
           mkdir -p artifact
-          # Vite/React build dans "dist/" par défaut
           tar -C dist -czf artifact/${{ env.ARCHIVE_NAME }} .
 
       - name: Prepare SSH key
@@ -78,16 +76,10 @@ jobs:
           mkdir -p "$RELEASE_DIR"
           tar -xzf /tmp/${{ env.ARCHIVE_NAME }} -C "$RELEASE_DIR"
           rm -f /tmp/${{ env.ARCHIVE_NAME }}
-
-          # Permissions propres
           chgrp -R www-data "$RELEASE_DIR" || true
           find "$RELEASE_DIR" -type d -exec chmod 755 {} \;
           find "$RELEASE_DIR" -type f -exec chmod 644 {} \;
-
-          # Bascule atomique sur la nouvelle release
           ln -sfn "$RELEASE_DIR" "${{ secrets.VPS_PATH }}/current"
-
-          # Garder seulement les 10 dernières releases
           cd "${{ secrets.VPS_PATH }}/releases"
           ls -1dt release-* 2>/dev/null | tail -n +11 | xargs -r rm -rf
           EOF
